--- a/vocabulary.html
+++ b/vocabulary.html
@@ -2,101 +2,120 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>test</title>
+        <meta name="viewport" content="width=1200, initial-scale=1.0">
+        <title>Лексика</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="adaptive.css">
     </head>
     <body>
         <header>
-            <div class="headerCont">
-                <button><a href="index.html">Главная</a></button>
-                <button class="headerText">Лексика</button>
-                <button>Фонетика</button>
-                <button>Грамматика</button>
-                <button>Ссылки</div>
+            <div class="container">
+                <ul class="links" style="margin-top: 0px; margin-bottom: 0px;">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="#">Лексика</a></li>
+                    <li><a href="phonetics.html">Фонетика</a></li>
+                    <li><a href="grammatics.html">Грамматика</a></li>
+                    <li><a href="#">Ссылки</a></li>
+                </ul>
             </div>
         </header>
-        <div class="roflLine"></div>
-        <section>
-            <div class="htUpCont">
-                <div class="htCont">
-                    <div class="htText">
-                        <h1>Лексика слаянских языков</h1>
-                        <div class="subheadCont">
-                            <span class="sub">Лексикология – раздел науки о языке, изучающий его словарный запас.</span>
-                            <span class="sub">Славянские языки имеют много общих слов, что позволяет людям, говорящим на одном из них, интуитивно понимать смысл слов в другом.</span>
-                        </div>
-                    </div>
-                    <div class="roflLine"></div>
-                </div>
-                <div class="Line"></div>
-            </div>
-            <div class="main">
-                <div class="s1_mCont">
-                    <h2>Формирование лексики</h2>
-                    <div class="s1_sCont">
-                        <div class="s1_ssCont">
-                            <div class="s1Text">
-                                <h3></h3>
-                                <p>Ныне сложившиеся языки произошли от праславянского языка, который, в свою очередь, произошел от праиндоевропейского языка.
-                                    Существовало три диалекта праславянского языка: восточный, западный и южный, которые после распада праславянского языка начали развиваться обособленно друг от друга. </p>
-                            </div>
-                            <div class="s1Text">
-                                <h3>Роль праславянского языка</h3>
-                                <p>Праславянский язык заложил основы лексики всех славянских языков. Около двух тысяч слов восходят к праславянскому языку. Эти слова называются общеславянскими, и их  поймет любой славяноязычный человек.
-                                    Большинство общеславянских слов – слова бытового характера или охватывающие основные понятия. Например слова, связанные с природой (небо, земля, огонь, дерево, камень), человеком (тело, одежда, пища) и обществом (работа, закон, мир).
-                                    Благодаря единому происхождению современные славянские языки имеют немало сходных слов и грамматических форм. </p>
-                            </div>
-                            <div class="s1Text">
-                                <h3>Восточнославянские языки</h3>
-                                <p>Восточные славяне говорили на древнерусском языке, который активно развивался до дробления Руси в 12 веке. После распада Киевского государства на основе территориальных диалектов и влияния соседних государств начали выделяться самостоятельные языки. Современные национальные литературные языки восточных славян (русский, белорусский и украинский) сложились в 19—20 веках. Эти языки по сей день остаются близкими. Установлено, что восточнославянские языки имеют не менее 60% общей лексики. Оставшаяся доля – заимствования, в основном пришедшие в белорусский и украинский из польского языка.</p>
-                            </div>
-                            <div class="s1PerformText">
-                                <h3>Западнославянские языки</h3>
-                                <p>Из западного диалекта праславянского языка образовалось три подгруппы: лехитская, лужицкая и чешско-словацкая.</p>
-                                <div class="shape">
-                                    <p>В лехитскую подгруппу входят кашубский, польский и вымерший полабский языки.</p>
-                                    <p>В лужицкую подгруппу входят верхнелужицкий и нижнелужицкий языки.</p>
-                                    <p>В чешско-слоавцкую подгруппу входят чешский и словацкий языки.</p>
-                                </div>
-                                <p>В этих языках сохранилось немало слов из праславянского лексического фонда, и пришли заимствования из немецкого языка. На данный момент языки западнославянской подгруппы, за исключением польского, чешского и словацкого, почти полностью вышли из употребления, так как были вытеснены либо ранее перечисленными языками, либо немецким языком.</p>
-                            </div>
-                            <div class="s1PerformText">
-                                <h3>Южнославянские языки</h3>
-                                <p>Из южного диалекта праславянского языка, как и из западного, не сформировался единый язык. Выделились восточная и западная подгруппы.</p>
-                                <div class="shape">
-                                    <p>В восточную подгруппу входят болгарский, македноский, церковнославянский и вымерший старославянский языки.</p>
-                                    <p>В западную подгруппу входят сербский, боснийский, черногорский, хорватский и словенский языки.</p>
-                                </div>
-                                <p>Лексика восточной и западной подгруппы, за исключением словенского и хорватского языков, насыщена заимствованиями из турецкого языка. Болгарский и македонский частично сохранили слова старославянского и церковнославянского происхождения.</p>
-                                <p>В 19 веке были заложены основы единого сербско-хорватского языка, целью которого являлось объединение литературных норм сербского, хорватского, боснийского и черногорского языков, но за последнее столетие влияние этого языка сильно ослабло. Хорватский язык начал намеренно отдаляться от сербского, наполняя его неологизмами.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="s1_mCont">
-                    <h2>Заимствования</h2>
-                    <div class="s1_sCont">
-                        <div class="s1_ssCont">
-                            <div class="s1Text">
-                                <h3>Из других  языков</h3>
-                                <p>Многие заимствования славяне брали у соседей. Немецкие заимствования гораздо чаще встречаются в западнославянском, чем в русском или сербском, а слова турецкого происхождения встречаются в южнославянском языке чаще, чем в других славянских языках.</p>
-                                <p>Заимствования из древнегреческого и латинского языков вошли почти во все европейские языки, в том числе в праславянский. Так, например, из древнегреческого вошли слова ангел, философия, музыка, из латинского – школа, сенат, конституция и другие.
-                                    Позднее в славянские языки начали приходить заимствования преимущественно из французского и английских языков. Эти слова зачастую сначала заимствовались одним славянским языком, а затем из него попадали в другой. Например, слово марш попало из французского в немецкий, из немецкого в польский, из польского – во все остальные славянские языки.</p>
-                            </div>
-                            <div class="s1Text">
-                                <h3>Взаимообогащение языков</h3>
-                                <p>Cлавянские народы на протяжении многих веков жили бок о бок, что обусловило тесные культурные связи.</p>
-                                <p>Многие заимствования в древнерусский язык пришли из южнославянских языков, что вызвано сильными культурными связями несколько столетий тому назад.
-                                    В русском языке заметно больше, чем в других языках сохранилась исконная лексиска церковнославянского языка, принадлежащего к восточной подгруппе южнославянской группы языков. Например, такие слова как благодарю, время и вещь – церковнославянизмы, которые практически не употребляются в иных славянских языках.</p>
-                            </div>
-                        </div>
+        <section id="main">
+            <div class="container">
+                <div class="set">
+                    <h1>Лексика славянских языков</h1>
+                    <div class="subInfo">
+                        <span class="subheadText">Лексикология – раздел науки о языке, изучающий его словарный запас.</span>
+                        <span class="subheadText">Славянские языки имеют много общих слов, что позволяет людям, говорящим на одном из них, интуитивно понимать смысл слов в другом.</span>
                     </div>
                 </div>
             </div>
         </section>
+        <section id="content">
+            <div class="container">
+                <div class="set">
+                    <h2>Формирование лексики</h2>
+                    <div class="allContent">
+                        <div class="block">
+                            <p>Ныне сложившиеся языки произошли от праславянского языка, который, в свою очередь, произошел от праиндоевропейского языка.</p>
+                            <p>Существовало три его диалекта: восточный, западный и южный, которые после распада праславянского языка начали развиваться обособленно друг от друга. </p>
+                            <p>Праславянский язык заложил основы лексики всех славянских языков. Около двух тысяч слов восходят к праславянскому языку. Эти слова называются общеславянскими, и их  поймет любой славяноязычный человек.</p>
+                            <div class="holder"><p>Большинство общеславянских слов – слова бытового характера или охватывающие основные понятия.</p></div>
+                            <p class="closing"><b>Примеры:</b> слова, связанные с <span style='color: #00AF27;'>природой</span> <span class='example'>(небо, земля, огонь, дерево, камень)</span>, <span style='color: #0051AF;'>человеком</span> <span class="example">(тело, одежда, пища)</span> и <span style='color: #5800AF;'>обществом</span> <span class='example'>(работа, закон, мир).</span></p>
+                        </div>
+                        <div class="block">
+                            <div class="markableBig">Восточнославянские языки</div>
+                            <p class="closing">Восточные славяне говорили на <span class='marker' style="background-color:#a3add8;">древнерусском</span> языке, который активно развивался до дробления Руси в 12 веке. После распада Киевского государства на основе территориальных диалектов и влияния соседних государств начали выделяться самостоятельные языки. Современные национальные литературные языки восточных славян (русский, белорусский и украинский) сложились в 19—20 веках. Эти языки по сей день остаются близкими. Установлено, что восточнославянские языки имеют <span style='text-decoration-line: underline;'>не менее 60% общей лексики</span>. Оставшаяся доля – заимствования, в основном пришедшие в белорусский и украинский из польского языка.</p>
+                        </div>
+                        <div class="block">
+                            <div class="markableBig">Западнославянские языки</div>
+                            <p>Из западного диалекта праславянского языка образовалось три подгруппы: <span class="marker" style="background-color: #cbcc89;">лехитская,</span> <span class="marker" style="background-color: #cbcc89;">лужицкая</span> и <span class="marker" style="background-color: #cbcc89;">чешско-словацкая.</span></p>
+                            <div class="langGroup">
+                                <div class="partHolder" style="background-color: #EAFEFF; border-left: 3px solid #7BF9FF; width: 340px;">
+                                    <h3>Лехитская</h3>
+                                    <p class="closing">Польский, кашубский, 
+                                        полабский, словинский</p>
+                                </div>
+                                <div class="partHolder" style="background-color: #EAFFF0; border-left: 3px solid #99FFB6; width: 340px;">
+                                    <h3>Лужицкая</h3>
+                                    <p class="closing">Верхнелужицкий, нижнелужицкий </p>
+                                </div>
+                                <div class="partHolder" style="background-color: #FFFCEA; border-left: 3px solid #FFF097; width: 340px;">
+                                    <h3>Чешско-словацкая</h3>
+                                    <p class="closing">Чешский, словацкий</p>
+                                </div>
+                            </div>
+                            <p class="closing">В этих языках сохранилось немало слов из праславянского лексического фонда, а также пришли заимствования из немецкого языка. На данный момент языки западнославянской подгруппы, за исключением польского, чешского и словацкого, почти полностью вышли из употребления, так как были вытеснены либо ранее перечисленными языками, либо немецким языком.</p>
+                        </div>
+                        <div class="closingBlock">
+                            <div class="markableBig">Южнославянские языки</div>
+                            <p>Из южного диалекта праславянского языка, как и из западного, не сформировался единый язык. Выделились <span class="marker" style="background-color: #c591a4;">восточная</span> и <span class="marker" style="background-color: #c591a4;">западная</span> подгруппы.</p>
+                            <div class="langGroup">
+                                <div class="partHolder" style="background-color: #EDEAFF; border-left: 3px solid #A899FF; width: 525px;">
+                                    <h3>Восточная подгруппа</h3>
+                                    <p class="closing">Болгарский, македонский, старославянский и церковнославянский</p>
+                                </div>
+                                <div class="partHolder" style="background-color: #FFEAF5; border-left: 3px solid #FF9ACF; width: 525px;">
+                                    <h3>Западная подгруппа</h3>
+                                    <p class="closing">Сербский, боснийский, черногорский, хорватский и  словенский</p>
+                                </div>
+                            </div>
+                            <p>Лексика восточной и западной подгруппы, за исключением словенского и хорватского языков, насыщена заимствованиями из турецкого языка. Болгарский и македонский частично сохранили слова старославянского и церковнославянского происхождения.</p>
+                            <p class="closing">В 19 веке были заложены основы единого сербско-хорватского языка, целью которого являлось объединение литературных норм сербского, хорватского, боснийского и черногорского языков, но за последнее столетие влияние этого языка сильно ослабло. Хорватский язык начал намеренно отдаляться от сербского, наполняя его неологизмами.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> 
+        <section id="content">
+            <div class="container">
+                <div class="set">
+                    <h2>Заимствования</h2>
+                    <p>Многие заимствования славяне брали у соседей. Немецкие заимствования гораздо чаще встречаются в западнославянском, чем в русском или сербском, а слова турецкого происхождения встречаются в южнославянском языке чаще, чем в других славянских языках.</p>
+                    <p>Заимствования из древнегреческого и латинского языков вошли почти во все европейские языки, в том числе в праславянский. Так, например, из <span style="color: #002367">древнегреческого</span> вошли слова <span class="example">ангел, философия, музыка</span>, из <span style="color: #671300">латинского</span> – <span>школа, сенат, конституция</span> и другие.</p>
+                    <p>Позднее в славянские языки начали приходить заимствования преимущественно из французского и английских языков. Эти слова зачастую сначала заимствовались одним славянским языком, а затем из него попадали в другой.</p>
+                    <p><b>Пример:</b> слово <span class="example">марш</span> попало из французского в немецкий, из немецкого в польский, из польского – во все остальные славянские языки.</p>
+                    <p class="closing">Многие заимствования в древнерусский язык пришли из южнославянских языков, что вызвано сильными культурными связями несколько столетий тому назад. В русском языке заметно больше, чем в других языках сохранилась исконная лексиска <span style="background-color: #c7bd9e;"></span> языка, принадлежащего к восточной подгруппе южнославянской группы языков. Например, такие слова как <span class="example">благодарю, время, вещь</span> – <span style='color: #907600;'>церковнославянизмы</span>, которые практически не употребляются в иных славянских языках.</p>
+                </div>
+            </div>
+        </section>
         <footer>
-            <div class="roflLine"></div>
+            <div class="container">
+                <div class="navig">
+                    <div class='line' style="width:742px;"></div>
+                    <a href="phonetics.html">
+                        <div class="navButton" id="phonetics">
+                            <h3 class='closing'>Фонетика</h3>
+                            <div class="polygon"></div>
+                        </div>
+                    </a>
+                    <a href="grammatics.html">
+                        <div class="navButton" id="grammatics">
+                            <h3 class='closing'>Грамматика</h3>
+                            <div class="polygon" style="border-left: 24px solid #B297FF;"></div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
