--- a/vocabulary.html
+++ b/vocabulary.html
@@ -14,7 +14,7 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="#">Лексика</a></li>
                     <li><a href="phonetics.html">Фонетика</a></li>
-                    <li><a href="grammatics.html">Грамматика</a></li>
+                    <li><a href="#">Грамматика</a></li>
                     <li><a href="#">Ссылки</a></li>
                 </ul>
             </div>
