--- a/index.html
+++ b/index.html
@@ -2,111 +2,78 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>test</title>
+        <meta name="viewport" content="width=1200, initial-scale=1.0">
+        <title>Главная</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
-        <div class="mainInfoCont">
-            <h1>Сравнение славянских языков</h1>
-            <p class="subline">Этот сайт посвящен сравнительному анализу славянских языков. Здесь вы найдете информацию об истории, лексике, фонетике и грамматике славянских языков.</p>
-        </div>
-        <div>
-            <a href ='vocabulary.html'>
-                <div class="contain">
-                    <div class="textCont">
-                        <p class="textline">Лексика</p>
-                        <div class="sublineCont">
-                            <span class="sub">Объем, состав, изменение и употребление слов</span>
-                            <div class="tagCont">
-                                <div class="tagline">
-                                    <div class="tagholder"><p class="t">Слова</p></div>
-                                </div>
-                                <div class="tagline">
-                                    <div class="tagholder"><p class="t">Фразеологизмы</p></div>
-                                </div>
-                                <div class="tagline">
-                                    <div class="tagholder"><p class="t">Словосочетания</p></div>
-                                </div>
+    <body style="background-color: #FBFBFB;">
+        <section id="altMain">
+            <div class="container">
+                <div>
+                    <h1 style="font-size: 44px;">Cлавянские языки. <span style="font-family: 'Georgia'; font-weight: 400;">Сходства и различия</span></h1>
+                    <p class="subheadText" style="font-weight: 400; opacity: 75%">Этот сайт посвящен сравнительному анализу славянских языков. Здесь вы найдете информацию об истории, лексике, фонетике и грамматике славянских языков.</p>
+                </div>
+            </div>
+        </section>
+        <div class='line'></div>
+        <section style="margin-top: 120px; margin-bottom: 150px;">
+            <div class="container">
+                <h4>Основные критерии сравнения</h4>
+                <a href="vocabulary.html">
+                    <div class="linkCont">
+                        <div style="width: 700px;">
+                            <h2 style="font-size: 36px; padding-bottom: 20px;">Лексика</h2>
+                            <p class="subheadText">Объем, состав, изменение и употребление слов</p>
+                            <div style="display: flex; gap: 15px; margin-bottom: 15px;">
+                                <div class="mini" style="background-color: #FFEAEA;"><p class="closing">Слова</p></div>
+                                <div class="mini" style="background-color: #FFEAEA;"><p class="closing">Фразеологизмы</p></div>
+                                <div class="mini" style="background-color: #FFEAEA;"><p class="closing">Словосочетания</p></div>
                             </div>
-                            <div class="tagCont">
-                                <div class="tagline">
-                                    <div class="tagholder2"><p class="t">Формирование лексики</p></div>
-                                </div>
-                                <div class="tagline">
-                                    <div class="tagholder2"><p class="t">Заимствования</p></div>
-                                </div>
+                            <div style="display: flex; gap: 15px;">
+                                <div class="altMini"><p class="closing">Формирование лексики</p></div>
+                                <div class="altMini"><p class="closing">Заимствования</p></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="weird">
                         <div class="arrow"></div>
                     </div>
-                </div>
-            </a>
-            <div class="contain">
-                <div class="textCont">
-                    <p class="textline">Фонетика</p>
-                    <div class="sublineCont">
-                        <span class="sub">Звуковой строй языка</span>
-                        <div class="tagCont">
-                            <div class="tagline">
-                                <div class="tagholder3"><p class="t">Звуки</p></div>
+                </a>
+                <a href="phonetics.html">
+                    <div class="linkCont">
+                        <div style="width: 700px;">
+                            <h2 style="font-size: 36px; padding-bottom: 20px;">Фонетика</h2>
+                            <p class="subheadText">Звуковой строй языка</p>
+                            <div style="display: flex; gap: 15px; margin-bottom: 15px;">
+                                <div class="mini" style="background-color: #EBFFEA;"><p class="closing">Звуки</p></div>
+                                <div class="mini" style="background-color: #EBFFEA;"><p class="closing">Слоги</p></div>
+                                <div class="mini" style="background-color: #EBFFEA;"><p class="closing">Ударения</p></div>
+                                <div class="mini" style="background-color: #EBFFEA;"><p class="closing">Интонации</p></div>
                             </div>
-                            <div class="tagline">
-                                <div class="tagholder3"><p class="t">Слоги</p></div>
-                            </div>
-                            <div class="tagline">
-                                <div class="tagholder3"><p class="t">Ударения</p></div>
-                            </div>
-                            <div class="tagline">
-                                <div class="tagholder3"><p class="t">Интонации</p></div>
+                            <div style="display: flex; gap: 15px;">
+                                <div class="altMini"><p class="closing">Общие изменения</p></div>
+                                <div class="altMini"><p class="closing">Особенности отдельных языков</p></div>
                             </div>
                         </div>
-                        <div class="tagCont">
-                            <div class="tagline">
-                                <div class="tagholder2"><p class="t">общие изменения</p></div>
-                            </div>
-                            <div class="tagline">
-                                <div class="tagholder2"><p class="t">Особенности отдельных языков</p></div>
-                            </div>
-                        </div>
+                        <div class="arrow"></div>
                     </div>
-                </div>
-                <div class="weird">
-                    <div class="arrow"></div>
-                </div>
-            </div>
-            <div class="contain">
-                <div class="textCont">
-                    <p class="textline">Грамматика</p>
-                    <div class="sublineCont">
-                        <span class="sub">Строение слов и структура языка</span>
-                        <div class="tagCont">
-                            <div class="tagline">
-                                <div class="tagholder4"><p class="t">Части речи</p></div>
+                </a>
+                <a href="grammatics.html">
+                    <div class="linkCont">
+                        <div style="width: 700px;">
+                            <h2 style="font-size: 36px; padding-bottom: 20px;">Грамматика</h2>
+                            <p class="subheadText">Строение слов и структура языка</p>
+                            <div style="display: flex; gap: 15px; margin-bottom: 15px;">
+                                <div class="mini" style="background-color: #EAEAFF;"><p class="closing">Части речи</div>
+                                <div class="mini" style="background-color: #EAEAFF;"><p class="closing">Предложения</div>
+                                <div class="mini" style="background-color: #EAEAFF;"><p class="closing">Пунктуация</div>
                             </div>
-                            <div class="tagline">
-                                <div class="tagholder4"><p class="t">Предложения</p></div>
-                            </div>
-                            <div class="tagline">
-                                <div class="tagholder4"><p class="t">Пунктуация</p></div>
+                            <div style="display: flex; gap: 15px; margin-bottom: 15px;">
+                                <div class="altMini"><p class="closing">Общие изменения</p></div>
+                                <div class="altMini"><p class="closing">Особенности отдельных языков</p></div>
                             </div>
                         </div>
-                        <div class="tagCont">
-                            <div class="tagline">
-                                <div class="tagholder2"><p class="t">Формирование лексики</p></div>
-                            </div>
-                            <div class="tagline">
-                                <div class="tagholder2"><p class="t">Заимствования</p></div>
-                            </div>
-                        </div>
+                        <div class="arrow"></div>
                     </div>
-                </div>
-                <div class="weird">
-                    <div class="arrow"></div>
-                </div>
+                </a>
             </div>
-        </div>
-        <footer></footer>
+        </section>
     </body>
