--- a/vocabulary.html
+++ b/vocabulary.html
@@ -14,7 +14,7 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="#">Лексика</a></li>
                     <li><a href="phonetics.html">Фонетика</a></li>
-                    <li><a href="#">Грамматика</a></li>
+                    <li><a href="grammatics.html">Грамматика</a></li>
                     <li><a href="#">Ссылки</a></li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
                             </div>
                             <p class="closing">В этих языках сохранилось немало слов из праславянского лексического фонда, а также пришли заимствования из немецкого языка. На данный момент языки западнославянской подгруппы, за исключением польского, чешского и словацкого, почти полностью вышли из употребления, так как были вытеснены либо ранее перечисленными языками, либо немецким языком.</p>
                         </div>
-                        <div class="closingBlock">
+                        <div class="block" style="margin-bottom: 0px;">
                             <div class="markableBig">Южнославянские языки</div>
                             <p>Из южного диалекта праславянского языка, как и из западного, не сформировался единый язык. Выделились <span class="marker" style="background-color: #c591a4;">восточная</span> и <span class="marker" style="background-color: #c591a4;">западная</span> подгруппы.</p>
                             <div class="langGroup">
