--- a/grammatics.html
+++ b/grammatics.html
@@ -15,7 +15,7 @@
                     <li><a href="vocabulary.html">Лексика</a></li>
                     <li><a href="phonetics.html">Фонетика</a></li>
                     <li><a href="#">Грамматика</a></li>
-                    <li><a href="#">Ссылки</a></li>
+                    <li><a href="#">Источники</a></li>
                 </ul>
             </div>
         </header>
