--- a/phonetics.html
+++ b/phonetics.html
@@ -14,7 +14,7 @@
                     <li><a href="vocabulary.html">Лексика</a></li>
                     <li><a href="#">Фонетика</a></li>
                     <li><a href="grammatics.html">Грамматика</a></li>
-                    <li><a href="#">Ссылки</a></li>
+                    <li><a href="#">Источники</a></li>
                 </ul>
             </div>
         </header>
@@ -24,7 +24,7 @@
                     <h1>Фонетика славянских языков</h1>
                     <div class="subInfo">
                         <span class="subheadText">Фонетика – раздел науки о языке, изучающий его звуковой строй.</span>
-                        <span class="subheadText">Краткий вывод</span>
+                        <span class="subheadText">Область фонетики претерпела значительные изменения.</span>
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                             <p>В период существования древнерусского языка сформировались общие правила фонетики русского, белорусского и украинского языков. Вместо праславянских <span style="color: #713C3C">-ра-, -ла-, -ре-, -ле-</span> в корнях слов начали употребляться <span style='color: #713C3C'>-оро-, -оло-, -ере-, -еле-</span> (г<span class='example' style='color: #713C3C'>ра</span>д — г<span class='example' style='color: #713C3C'>оро</span>д, г<span class='example' style='color: #713C3C'>ла</span>ва — г<span class='example' style='color: #713C3C'>оло</span>ва, б<span class='example' style='color: #713C3C'>ре</span>г — б<span class='example' style='color: #713C3C'>ере</span>г). Также произошло смягчение согласных перед гласными [е], [ё], [и], [ю], [я]. </p>
                             <p>Современный <span class="marker" style="background-color: #cce8eb">русский</span> язык находится в определенных отношениях ко всем другим славянским языкам. В его языковой структуре обнаруживаются, с одной стороны, элементы, являющиеся общими для всех славян, а с другой — элементы, сближающие его только с другими восточнославянскими языками. Кроме того, в его языковой структуре есть черты, отличающие русский язык от всех остальных славянских языков, в том числе и от украинского и белорусского. Для русского языка характерно <span style='text-decoration-line: underline;'>аканье</span> – неразличение гласных /а/ и /о/</p>
                             <p><span class="marker" style="background-color: #b8c3df">Украинский</span> язык выделяется наличием букв <span style="color: #B86E00">/ґ/</span> [г], <span style="color: #B86E00">/є/</span> [е] и <span style="color: #B86E00">/ї/</span> [йи]. Согласная /г/ составляет звонкую пару букве [х], а гласная /e/ произносится как [э]. Звуки [дж] и [дз] приминяются для подчеркивания звонкости вместо букв /ч/ и /ц/ <span class="example">(дзвiн — звон).</span> Для украинского языка характерно <span style='text-decoration-line: underline;'>оканье</span> – гласная /o/ в безударной позиции так и произносится.</p>
-                            <p><span class="marker" style="background-color: #b3e0b2">Белорусский</span>язык использует кириллическое написание, но помимо этого существует и вариант написания на латинице, приближенный к польскому языку. В белорусском звуки /д/ и /т/ – всегда твердые, поэтому смягченные записываются как [дз] или [ц] (дзень — день). Ни в одном другом языке, кроме белорусского, нет буквы /ў/, которая произносится как [w]. Как и для русского языка, характерно аканье, закрепленное на письме <span class="example">(фота — фото).</span></p>
+                            <p><span class="marker" style="background-color: #b3e0b2">Белорусский</span> язык использует кириллическое написание, но помимо этого существует и вариант написания на латинице, приближенный к польскому языку. В белорусском звуки /д/ и /т/ – всегда твердые, поэтому смягченные записываются как [дз] или [ц] (дзень — день). Ни в одном другом языке, кроме белорусского, нет буквы /ў/, которая произносится как [w]. Как и для русского языка, характерно аканье, закрепленное на письме <span class="example">(фота — фото).</span></p>
                             <div class="holder" style="background-color: #D2DDE0; border-left: 3px solid #243E45;"><p>В белорусском и украинском языках звук /ч/, который в русском языке смягчается, означает твердый звук и произносится как [тш].</p></div>
                         </div>
                     </div>
@@ -64,8 +64,8 @@
                         <p>Западнославянские языки, в отличие от восточных и юго-восточных, используют латиницу, а не кириллицу.</p>
                         <p>В <span class='marker' style='background-color: #ddbbd5'>польском</span> языке ударение почти всегда ставится на предпоследний слог. Сочетания букв [rz] дает звук [ж], [cz] – [ч] и [sz] – [ш].</p>
                         <p>Если в польском языке буквосочетания дают один звук, то в <span class='marker' style='background-color: #ddbbd5'>чешском</span> языке ситуация обратная. Буква /ň/ образует сочетание [нь], /ř/ – [рж] и /ť/ – [ть].</p>
-                        <p><span class="marker" style="background-color: #bfaee6"></span>Словацкий язык во многом схож с чешским. К отличиям можно отнести наличие буквы /ä/. Для обозначения мягкости звука [л] используется буква /ľ/, а для долготы – /ĺ/.</p>
-                        <div class="holder" style="background-color: #D2E0DC; border-left: 3px solid #244531;"><p>В словацком и чешском языке не так много буквосочетаний, как в польском языке. Буква /ž/ дает звук [ж], /č/ – [ч] и /š/ – [ш].</p></div>
+                        <p><span class="marker" style="background-color: #bfaee6">Словацкий</span> язык во многом схож с чешским. К отличиям можно отнести наличие буквы /ä/. Для обозначения мягкости звука [л] используется буква /ľ/, а для долготы – /ĺ/.</p>
+                        <div class="holder" style="background-color: #D2E0DC; border-left: 3px solid #244531;"><p>В словацком и чешском языке не так много буквосочетаний, как в польском языке. Буква /ž/ дает звук [ж], /č/ – [ч] и /š/ – [ш]. Ударение в слове падает на первый слог <span class="example">(hlAva "голова", rUka "рука").</span></p></div>
                     </div>
                 </div>
             </div>
