--- a/vocabulary.html
+++ b/vocabulary.html
@@ -15,7 +15,7 @@
                     <li><a href="#">Лексика</a></li>
                     <li><a href="phonetics.html">Фонетика</a></li>
                     <li><a href="grammatics.html">Грамматика</a></li>
-                    <li><a href="#">Ссылки</a></li>
+                    <li><a href="#">Источники</a></li>
                 </ul>
             </div>
         </header>
